--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,8 @@ dependencies:
   lottie: ^2.0.0
   mask_text_input_formatter: ^2.4.0
   fluttertoast: ^8.1.1
-  pagination_view: ^2.0.0
-  # random_avatar: ^0.0.7
-  # cached_network_image: ^3.2.3
+  infinite_scroll_pagination: ^3.2.0
+  
 
 dev_dependencies:
   flutter_test:
